[gd_scene load_steps=23 format=2]

[ext_resource path="res://Background/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Tilemaps/Tilemaps.tscn" type="PackedScene" id=2]
[ext_resource path="res://AreaTransition.tscn" type="PackedScene" id=3]
[ext_resource path="res://Menu/UserInterface.tscn" type="PackedScene" id=4]
[ext_resource path="res://Menu/Hearts/BossHearts.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/Objects/Waterfall.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/Objects/Branch2.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/Objects/Rock.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/Objects/Tree.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/Player/Player.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/Objects/yFlower.png" type="Texture" id=11]
[ext_resource path="res://assets/Objects/flowers.png" type="Texture" id=12]
[ext_resource path="res://assets/Objects/bFlower.png" type="Texture" id=13]
[ext_resource path="res://assets/Objects/pFlower.png" type="Texture" id=14]
[ext_resource path="res://assets/Objects/Branch1.tscn" type="PackedScene" id=15]
[ext_resource path="res://World.gd" type="Script" id=16]
[ext_resource path="res://Music and Sounds/SFX/Wav Files/golem_death.wav" type="AudioStream" id=17]
[ext_resource path="res://assets/Enemy/Golem.tscn" type="PackedScene" id=18]
[ext_resource path="res://Camera/Camera2D.tscn" type="PackedScene" id=19]
[ext_resource path="res://CanvasModulate/CanvasModulate.gd" type="Script" id=20]

[sub_resource type="TileSet" id=58]
0/name = "bFlower.png 0"
0/texture = ExtResource( 13 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "flowers.png 1"
1/texture = ExtResource( 12 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "yFlower.png 2"
2/texture = ExtResource( 11 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "pFlower.png 3"
3/texture = ExtResource( 14 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0

[sub_resource type="AnimationNodeStateMachinePlayback" id=57]

[node name="World" type="Node2D"]
script = ExtResource( 16 )

[node name="Camera2D" parent="." instance=ExtResource( 19 )]
position = Vector2( 164, 302 )

[node name="TopLeft" parent="Camera2D/Limits" index="0"]
position = Vector2( -67, -53 )

[node name="BottomRight" parent="Camera2D/Limits" index="1"]
position = Vector2( 611, 344 )

[node name="Background" parent="." instance=ExtResource( 1 )]
position = Vector2( 143, 106 )

[node name="Tilemaps" parent="." instance=ExtResource( 2 )]

[node name="Sand" parent="Tilemaps" index="1"]
tile_data = PoolIntArray( 196618, 3, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 4, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 1, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 4, 0, 327696, 3, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 327700, 4, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 393236, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 0, 0, 524298, 2, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 1, 0, 524305, 2, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 589841, 3, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 655380, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 851988, 0, 0, 917521, 0, 0, 917522, 0, 0, 917523, 0, 0, 917524, 0, 0, 983057, 0, 0, 983058, 0, 0, 983059, 0, 0, 983060, 0, 0, 1048593, 0, 0, 1048594, 0, 0, 1048595, 0, 0, 1048596, 0, 0, 1114129, 0, 0, 1114130, 0, 0, 1114131, 0, 0, 1114132, 0, 0, 1179665, 0, 0, 1179666, 0, 0, 1179667, 0, 0, 1179668, 0, 0 )

[node name="Flowers" parent="Tilemaps" index="2"]
tile_set = SubResource( 58 )
cell_size = Vector2( 8, 8 )
tile_data = PoolIntArray( -393200, 2, 0, -393187, 1, 0, -393167, 1, 0, -327663, 2, 0, -327633, 1, 0, -327617, 0, 0, -262127, 2, 0, -262125, 2, 0, -262119, 1, 0, -262116, 1, 0, -262098, 1, 0, -262096, 2, 0, -262084, 3, 0, -262080, 0, 0, -196590, 2, 0, -196563, 1, 0, -196562, 1, 0, -196558, 1, 0, -196546, 0, 0, -131055, 2, 0, -131053, 2, 0, -131028, 2, 0, -131027, 2, 0, -131008, 0, 0, -65491, 1, 0, 65596, 0, 0, 196606, 1, 0, 196672, 0, 0, 327680, 1, 0, 393281, 3, 0, 1376305, 3, 0, 1441845, 0, 0, 1507378, 3, 0, 1507379, 0, 0, 1507382, 3, 0, 1572914, 0, 0, 1638452, 3, 0, 1703988, 0, 0, 1703992, 0, 0, 1900564, 1, 0, 2097171, 1, 0 )

[node name="Water" parent="Tilemaps" index="3"]
tile_data = PoolIntArray( -655354, 15, 0, -655353, 15, 0, -655352, 15, 0, -655350, 15, 0, -655348, 15, 0, -655345, 14, 0, -327675, 0, 0, -262142, 13, 0, -262141, 15, 0, -262135, 5, 0, -262134, 5, 0, -262133, 5, 0, -262129, 15, 0, -262127, 14, 0, -196586, 7, 0, -196585, 5, 0, -196583, 5, 0, -196581, 5, 0, -196579, 5, 0, -196577, 8, 0, -131067, 6, 0, -131066, 6, 0, -131065, 6, 0, -131064, 6, 0, -131063, 6, 0, -131062, 6, 0, -131061, 6, 0, -131060, 6, 0, -131059, 6, 0, -131058, 6, 0, -65534, 16, 0, -65533, 6, 0, -65532, 6, 0, -65531, 6, 0, -65530, 6, 0, -65529, 6, 0, -65528, 6, 0, -65527, 6, 0, -65526, 6, 0, -65525, 6, 0, -65524, 6, 0, -65523, 6, 0, -65521, 6, 0, -65519, 17, 0, -65515, 1, 0, 2, 16, 0, 3, 6, 0, 5, 6, 0, 6, 6, 0, 9, 6, 0, 10, 6, 0, 14, 6, 0, 15, 6, 0, 17, 17, 0, 65538, 16, 0, 65539, 6, 0, 65541, 6, 0, 65542, 3, 0, 65543, 6, 0, 65544, 6, 0, 65545, 6, 0, 65546, 6, 0, 65548, 6, 0, 65550, 6, 0, 65551, 6, 0, 65553, 17, 0, 131074, 16, 0, 131075, 6, 0, 131077, 6, 0, 131080, 6, 0, 131081, 6, 0, 131082, 6, 0, 131084, 6, 0, 131086, 6, 0, 131087, 6, 0, 131089, 17, 0, 196610, 16, 0, 196611, 6, 0, 196613, 6, 0, 196615, 6, 0, 196617, 6, 0, 196618, 6, 0, 196620, 6, 0, 196622, 6, 0, 196623, 6, 0, 196625, 17, 0, 262146, 16, 0, 262147, 6, 0, 262148, 6, 0, 262149, 6, 0, 262151, 6, 0, 262153, 6, 0, 262154, 6, 0, 262156, 6, 0, 262158, 6, 0, 262159, 6, 0, 262161, 17, 0, 327682, 16, 0, 327683, 6, 0, 327685, 6, 0, 327687, 6, 0, 327689, 6, 0, 327690, 6, 0, 327692, 6, 0, 327694, 6, 0, 327695, 6, 0, 327697, 17, 0, 393218, 16, 0, 393219, 6, 0, 393221, 6, 0, 393223, 6, 0, 393225, 6, 0, 393226, 6, 0, 393227, 6, 0, 393228, 6, 0, 393230, 6, 0, 393231, 6, 0, 393233, 17, 0, 458754, 16, 0, 458755, 6, 0, 458757, 6, 0, 458759, 6, 0, 458760, 6, 0, 458761, 6, 0, 458762, 6, 0, 458763, 6, 0, 458764, 6, 0, 458766, 6, 0, 458767, 6, 0, 458769, 17, 0, 524290, 16, 0, 524291, 6, 0, 524293, 6, 0, 524295, 6, 0, 524296, 6, 0, 524297, 6, 0, 524299, 6, 0, 524300, 6, 0, 524302, 6, 0, 524303, 6, 0, 524305, 17, 0, 589826, 16, 0, 589827, 6, 0, 589829, 6, 0, 589831, 6, 0, 589833, 6, 0, 589835, 6, 0, 589836, 6, 0, 589838, 6, 0, 589839, 6, 0, 589841, 17, 0, 655362, 16, 0, 655363, 6, 0, 655365, 6, 0, 655367, 6, 0, 655369, 6, 0, 655371, 6, 0, 655372, 6, 0, 655374, 6, 0, 655375, 6, 0, 655377, 17, 0, 720898, 16, 0, 720899, 6, 0, 720901, 6, 0, 720903, 6, 0, 720905, 6, 0, 720907, 6, 0, 720909, 6, 0, 720910, 6, 0, 720911, 6, 0, 720913, 17, 0, 786434, 16, 0, 786435, 6, 0, 786437, 6, 0, 786439, 6, 0, 786441, 6, 0, 786443, 6, 0, 786445, 6, 0, 786446, 6, 0, 786447, 6, 0, 786449, 17, 0, 851970, 16, 0, 851971, 6, 0, 851973, 6, 0, 851975, 6, 0, 851977, 6, 0, 851979, 6, 0, 851981, 6, 0, 851982, 6, 0, 851983, 6, 0, 851985, 17, 0, 917507, 6, 0, 917509, 6, 0, 917511, 6, 0, 917513, 6, 0, 917515, 6, 0, 917517, 6, 0, 917518, 6, 0, 917519, 6, 0, 917521, 17, 0, 983042, 16, 0, 983043, 6, 0, 983045, 6, 0, 983047, 6, 0, 983049, 6, 0, 983051, 6, 0, 983053, 6, 0, 983054, 6, 0, 983055, 6, 0, 983057, 17, 0, 1048578, 16, 0, 1048579, 6, 0, 1048581, 6, 0, 1048583, 6, 0, 1048585, 6, 0, 1048587, 6, 0, 1048589, 6, 0, 1048590, 6, 0, 1048591, 6, 0, 1048593, 17, 0, 1114114, 16, 0, 1114115, 6, 0, 1114117, 6, 0, 1114119, 6, 0, 1114121, 6, 0, 1114123, 6, 0, 1114125, 6, 0, 1114126, 6, 0, 1114127, 6, 0, 1114129, 17, 0, 1179650, 16, 0, 1179651, 6, 0, 1179653, 6, 0, 1179655, 6, 0, 1179657, 6, 0, 1179659, 6, 0, 1179661, 6, 0, 1179662, 6, 0, 1179663, 6, 0, 1245186, 16, 0, 1245187, 6, 0, 1245190, 6, 0, 1245191, 6, 0, 1245193, 6, 0, 1245195, 6, 0, 1245197, 6, 0, 1245198, 6, 0, 1245201, 17, 0, 1310722, 16, 0, 1310723, 6, 0, 1310725, 6, 0, 1310726, 6, 0, 1310727, 6, 0, 1310729, 6, 0, 1310731, 6, 0, 1310733, 6, 0, 1310735, 6, 0, 1310737, 17, 0, 1376258, 16, 0, 1376259, 6, 0, 1376260, 6, 0, 1376262, 6, 0, 1376263, 6, 0, 1376265, 6, 0, 1376266, 6, 0, 1376268, 6, 0, 1376269, 6, 0, 1376271, 6, 0, 1376273, 17, 0, 1441794, 16, 0, 1441796, 6, 0, 1441798, 6, 0, 1441799, 6, 0, 1441801, 6, 0, 1441802, 6, 0, 1441804, 6, 0, 1441805, 6, 0, 1441807, 6, 0, 1441809, 17, 0, 1507330, 16, 0, 1507331, 6, 0, 1507332, 6, 0, 1507334, 6, 0, 1507335, 6, 0, 1507337, 6, 0, 1507338, 6, 0, 1507340, 6, 0, 1507341, 6, 0, 1507343, 6, 0, 1507345, 17, 0, 1572866, 16, 0, 1572868, 6, 0, 1572870, 6, 0, 1572872, 6, 0, 1572874, 6, 0, 1572876, 6, 0, 1572877, 6, 0, 1572879, 6, 0, 1572881, 17, 0, 1638403, 6, 0, 1638404, 6, 0, 1638406, 6, 0, 1638408, 6, 0, 1638410, 6, 0, 1638412, 6, 0, 1638413, 6, 0, 1638415, 6, 0, 1638417, 17, 0, 1703938, 16, 0, 1703939, 6, 0, 1703940, 6, 0, 1703942, 6, 0, 1703944, 6, 0, 1703946, 6, 0, 1703948, 6, 0, 1703949, 6, 0, 1703951, 6, 0, 1703953, 17, 0, 1769474, 16, 0, 1769475, 6, 0, 1769476, 6, 0, 1769478, 6, 0, 1769480, 6, 0, 1769482, 6, 0, 1769484, 6, 0, 1769485, 6, 0, 1769487, 6, 0, 1769489, 17, 0, 1835010, 16, 0, 1835011, 6, 0, 1835012, 6, 0, 1835014, 6, 0, 1835016, 6, 0, 1835018, 6, 0, 1835020, 6, 0, 1835022, 6, 0, 1835025, 17, 0, 1900546, 16, 0, 1900547, 6, 0, 1900548, 6, 0, 1900550, 6, 0, 1900552, 6, 0, 1900554, 6, 0, 1900556, 6, 0, 1900558, 6, 0, 1900559, 6, 0, 1900561, 17, 0, 1966082, 16, 0, 1966083, 6, 0, 1966084, 6, 0, 1966086, 6, 0, 1966088, 6, 0, 1966090, 6, 0, 1966092, 6, 0, 1966094, 6, 0, 1966095, 6, 0, 1966097, 17, 0, 2031618, 16, 0, 2031619, 6, 0, 2031620, 6, 0, 2031622, 6, 0, 2031624, 6, 0, 2031626, 6, 0, 2031628, 6, 0, 2031630, 6, 0, 2031631, 6, 0, 2031633, 17, 0, 2097154, 16, 0, 2097155, 6, 0, 2097156, 6, 0, 2097158, 6, 0, 2097160, 6, 0, 2097162, 6, 0, 2097164, 6, 0, 2097166, 6, 0, 2097167, 6, 0, 2097169, 17, 0, 2162690, 16, 0, 2162691, 6, 0, 2162692, 6, 0, 2162694, 6, 0, 2162696, 6, 0, 2162698, 6, 0, 2162700, 6, 0, 2162702, 6, 0, 2162703, 6, 0, 2162705, 17, 0, 2228226, 16, 0, 2228227, 6, 0, 2228228, 6, 0, 2228230, 6, 0, 2228232, 6, 0, 2228234, 6, 0, 2228236, 6, 0, 2228238, 6, 0, 2228239, 6, 0, 2228241, 17, 0, 2293762, 16, 0, 2293763, 6, 0, 2293764, 6, 0, 2293766, 6, 0, 2293768, 6, 0, 2293770, 6, 0, 2293772, 6, 0, 2293774, 6, 0, 2293775, 6, 0, 2293777, 17, 0, 2359298, 16, 0, 2359299, 6, 0, 2359300, 6, 0, 2359301, 6, 0, 2359302, 6, 0, 2359304, 6, 0, 2359306, 6, 0, 2359308, 6, 0, 2359310, 6, 0, 2359311, 6, 0, 2359313, 17, 0 )

[node name="Cliffs" parent="Tilemaps" index="5"]
tile_data = PoolIntArray( -196610, 19, 0, -196609, 9, 0, -262144, 9, 0, -262143, 9, 0, -262142, 9, 0, -262141, 9, 0, -262140, 9, 0, -262139, 9, 0, -262138, 9, 0, -262137, 536870915, 0, -262136, 536870915, 0, -262135, 536870915, 0, -262134, 536870915, 0, -262133, 536870915, 0, -262132, 536870915, 0, -262131, 536870915, 0, -262130, 536870915, 0, -262129, 536870915, 0, -262128, 536870915, 0, -262127, 536870915, 0, -262126, 536870915, 0, -262125, 536870915, 0, -262124, 536870915, 0, -262123, 536870915, 0, -262122, 536870915, 0, -262121, 536870915, 0, -262120, 536870915, 0, -262119, 536870915, 0, -262118, 536870915, 0, -262117, 536870915, 0, -262116, 536870915, 0, -262115, 536870915, 0, -262114, 536870915, 0, -262113, 536870915, 0, -262112, 536870915, 0, -262111, 22, 0, -131074, 23, 0, -196575, 8, 0, -65538, 23, 0, -131039, 8, 0, -2, 23, 0, -65503, 8, 0, 65534, 23, 0, 33, 8, 0, 131070, 23, 0, 65569, 8, 0, 196606, 23, 0, 131105, 8, 0, 262142, 23, 0, 196641, 8, 0, 327678, 23, 0, 262177, 8, 0, 393214, 23, 0, 327713, 8, 0, 327714, 22, 0, 327715, 6, 0, 327716, 6, 0, 327717, 6, 0, 327718, 6, 0, 327719, 6, 0, 327720, 6, 0, 458750, 23, 0, 524286, 23, 0, 589822, 23, 0, 524322, 6, 0, 524323, 6, 0, 524324, 6, 0, 524325, 6, 0, 524326, 6, 0, 524327, 6, 0, 524328, 6, 0, 655358, 23, 0, 589857, 8, 0, 720894, 23, 0, 655393, 8, 0, 786430, 23, 0, 720929, 8, 0, 851966, 23, 0, 786465, 8, 0, 917502, 23, 0, 852001, 8, 0, 983038, 23, 0, 917537, 8, 0, 1048574, 23, 0, 983073, 8, 0, 1114110, 23, 0, 1048609, 8, 0, 1179646, 23, 0, 1114145, 8, 0, 1245182, 7, 0, 1245183, 6, 0, 1179648, 6, 0, 1179649, 6, 0, 1179650, 6, 0, 1179651, 6, 0, 1179652, 6, 0, 1179653, 6, 0, 1179654, 6, 0, 1179655, 6, 0, 1179656, 6, 0, 1179657, 6, 0, 1179658, 6, 0, 1179659, 6, 0, 1179660, 6, 0, 1179661, 6, 0, 1179662, 6, 0, 1179663, 6, 0, 1179664, 6, 0, 1179670, 6, 0, 1179671, 6, 0, 1179672, 6, 0, 1179673, 6, 0, 1179674, 6, 0, 1179675, 6, 0, 1179676, 6, 0, 1179677, 6, 0, 1179678, 6, 0, 1179679, 6, 0, 1179680, 6, 0, 1179681, 20, 0 )

[node name="FakeCliffs" parent="Tilemaps" index="6"]
cell_size = Vector2( 8, 8 )
tile_data = PoolIntArray( 720966, 2, 0, 720967, 2, 0, 720968, 2, 0, 720969, 2, 0, 720970, 2, 0, 720971, 2, 0, 720973, 2, 0, 720974, 2, 0, 720975, 2, 0, 720977, 2, 0, 720978, 2, 0, 720980, 2, 0, 720981, 2, 0, 720982, 2, 0, 720983, 2, 0, 720984, 2, 0, 786502, 2, 0, 786503, 2, 0, 786504, 2, 0, 786505, 2, 0, 786507, 2, 0, 786509, 2, 0, 786511, 2, 0, 786513, 2, 0, 786514, 2, 0, 786515, 2, 0, 786516, 2, 0, 786517, 2, 0, 786518, 2, 0, 786519, 2, 0, 786520, 2, 0, 852037, 1, 0, 852038, 2, 0, 852041, 2, 0, 852043, 2, 0, 852045, 2, 0, 852047, 2, 0, 852049, 2, 0, 852050, 2, 0, 852051, 2, 0, 852052, 2, 0, 852053, 2, 0, 852054, 2, 0, 852055, 2, 0, 852056, 2, 0, 852057, 2, 0, 917573, 1, 0, 917574, 2, 0, 917575, 2, 0, 917576, 2, 0, 917577, 2, 0, 917579, 2, 0, 917581, 2, 0, 917583, 2, 0, 917585, 2, 0, 917586, 2, 0, 917587, 2, 0, 917588, 2, 0, 917589, 2, 0, 917590, 2, 0, 917591, 2, 0, 917592, 2, 0, 983109, 1, 0, 983110, 2, 0, 983111, 2, 0, 983115, 2, 0, 983117, 2, 0, 983119, 2, 0, 983121, 2, 0, 983122, 2, 0, 983123, 2, 0, 983124, 2, 0, 983125, 2, 0, 983126, 2, 0, 983127, 2, 0, 983128, 2, 0, 1048644, 3, 0, 1048646, 2, 0, 1048647, 2, 0, 1048648, 2, 0, 1048649, 2, 0, 1048650, 2, 0, 1048651, 2, 0, 1048652, 2, 0, 1048653, 2, 0, 1048654, 2, 0, 1048655, 2, 0, 1048657, 2, 0, 1048658, 2, 0, 1048661, 2, 0, 1048662, 2, 0, 1048663, 2, 0, 1114193, 2, 0, 1114194, 2, 0, 1114196, 2, 0, 1114197, 2, 0, 1114198, 2, 0, 1114199, 2, 0, 2424866, 0, 0, 2424867, 0, 0, 2424868, 0, 0, 2424869, 0, 0, 2424871, 0, 0, 2424873, 0, 0, 2424875, 0, 0, 2490402, 2, 0, 2490403, 2, 0, 2490404, 2, 0, 2490405, 2, 0, 2490406, 2, 0, 2490407, 2, 0, 2490408, 2, 0, 2555938, 2, 0, 2555944, 2, 0, 2621474, 2, 0, 2621475, 2, 0, 2621476, 2, 0, 2621477, 2, 0, 2621478, 2, 0, 2621480, 2, 0, 2687010, 2, 0, 2687011, 2, 0, 2687012, 2, 0, 2687013, 2, 0, 2687014, 2, 0, 2687015, 2, 0, 2687016, 2, 0, 2752551, 2, 0, 2752552, 2, 0, 2818082, 2, 0, 2818083, 2, 0, 2818084, 2, 0, 2818085, 2, 0, 2818086, 2, 0, 2818087, 2, 0, 2818088, 2, 0 )

[node name="UserInterface" parent="." instance=ExtResource( 4 )]

[node name="YSort" type="YSort" parent="."]

[node name="Player" parent="YSort" instance=ExtResource( 10 )]
position = Vector2( 164, 302 )

[node name="AnimationTree" parent="YSort/Player" index="0"]
parameters/playback = SubResource( 57 )

[node name="Sprite" parent="YSort/Player" index="1"]
frame = 57

[node name="Hurtbox" parent="YSort/Player" index="4"]
inv_duration = 1.0

[node name="AttackPivot" parent="YSort/Player" index="5"]
position = Vector2( -1, -13 )
rotation = 1.5708

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="YSort/Player"]
remote_path = NodePath("../../../Camera2D")

[node name="Golem" parent="YSort" instance=ExtResource( 18 )]
position = Vector2( 207, 90 )

[node name="Assets" type="YSort" parent="YSort"]

[node name="Waterfall" parent="YSort/Assets" instance=ExtResource( 6 )]
position = Vector2( 54, -37 )

[node name="Waterfall2" parent="YSort/Assets" instance=ExtResource( 6 )]
position = Vector2( 102, -37 )

[node name="Tree" parent="YSort/Assets" instance=ExtResource( 9 )]
position = Vector2( 5, -31 )

[node name="Tree2" parent="YSort/Assets" instance=ExtResource( 9 )]
position = Vector2( 383, 254 )

[node name="Tree3" parent="YSort/Assets" instance=ExtResource( 9 )]
position = Vector2( -6, 296 )

[node name="Tree4" parent="YSort/Assets" instance=ExtResource( 9 )]
position = Vector2( 224, 285 )

[node name="Rock" parent="YSort/Assets" instance=ExtResource( 8 )]
position = Vector2( 144, 239 )

[node name="Rock2" parent="YSort/Assets" instance=ExtResource( 8 )]
position = Vector2( 150, 243 )

[node name="Rock3" parent="YSort/Assets" instance=ExtResource( 8 )]
position = Vector2( 14, 13 )

[node name="Branch2" parent="YSort/Assets" instance=ExtResource( 7 )]
position = Vector2( 17, 17 )

[node name="Tree5" parent="YSort/Assets" instance=ExtResource( 9 )]
position = Vector2( 570, -84 )

[node name="Tree6" parent="YSort/Assets" instance=ExtResource( 9 )]
position = Vector2( 588, -27 )

[node name="Tree7" parent="YSort/Assets" instance=ExtResource( 9 )]
position = Vector2( 495, -107 )

[node name="Branch3" parent="YSort/Assets" instance=ExtResource( 7 )]
position = Vector2( 428, 286 )

[node name="Branch" parent="YSort/Assets" instance=ExtResource( 15 )]
position = Vector2( 411, 291 )

[node name="Branch4" parent="YSort/Assets" instance=ExtResource( 15 )]
position = Vector2( 557, 14 )

[node name="Branch5" parent="YSort/Assets" instance=ExtResource( 15 )]
position = Vector2( 523, -39 )

[node name="Branch6" parent="YSort/Assets" instance=ExtResource( 7 )]
position = Vector2( 521, -22 )

[node name="Rock4" parent="YSort/Assets" instance=ExtResource( 8 )]
position = Vector2( 132, -33 )

[node name="Rock5" parent="YSort/Assets" instance=ExtResource( 8 )]
position = Vector2( 144, -2 )

[node name="Tree8" parent="YSort/Assets" instance=ExtResource( 9 )]
position = Vector2( 566, 232 )

[node name="Tree9" parent="YSort/Assets" instance=ExtResource( 9 )]
position = Vector2( -61, 1 )

[node name="Tree10" parent="YSort/Assets" instance=ExtResource( 9 )]
position = Vector2( -61, 139 )

[node name="Tree11" parent="YSort/Assets" instance=ExtResource( 9 )]
position = Vector2( -55, 235 )

[node name="Tree12" parent="YSort/Assets" instance=ExtResource( 9 )]
position = Vector2( 411, -81 )

[node name="Tree13" parent="YSort/Assets" instance=ExtResource( 9 )]
position = Vector2( 568, 46 )

[node name="Tree14" parent="YSort/Assets" instance=ExtResource( 9 )]
position = Vector2( 563, 274 )

[node name="Tree15" parent="YSort/Assets" instance=ExtResource( 9 )]
position = Vector2( 244, -79 )

[node name="Tree16" parent="YSort/Assets" instance=ExtResource( 9 )]
position = Vector2( 133, -75 )

[node name="Rock6" parent="YSort/Assets" instance=ExtResource( 8 )]
position = Vector2( 113, -65 )

[node name="Rock7" parent="YSort/Assets" instance=ExtResource( 8 )]
position = Vector2( 55, -65 )

[node name="Rock8" parent="YSort/Assets" instance=ExtResource( 8 )]
position = Vector2( 65, -69 )

[node name="Rock9" parent="YSort/Assets" instance=ExtResource( 8 )]
position = Vector2( 85, -66 )

[node name="Rock10" parent="YSort/Assets" instance=ExtResource( 8 )]
position = Vector2( 95, -71 )

[node name="Branch7" parent="YSort/Assets" instance=ExtResource( 15 )]
position = Vector2( 500, 261 )

[node name="Branch8" parent="YSort/Assets" instance=ExtResource( 15 )]
position = Vector2( 504, 41 )

[node name="Branch9" parent="YSort/Assets" instance=ExtResource( 15 )]
position = Vector2( 191, 224 )

[node name="Branch10" parent="YSort/Assets" instance=ExtResource( 15 )]
position = Vector2( 353, 264 )

[node name="Branch11" parent="YSort/Assets" instance=ExtResource( 7 )]
position = Vector2( 353, 264 )

[node name="Branch12" parent="YSort/Assets" instance=ExtResource( 7 )]
position = Vector2( 260, 181 )

[node name="Branch13" parent="YSort/Assets" instance=ExtResource( 7 )]
position = Vector2( 529, 285 )

[node name="BlockadePosition" type="Position2D" parent="YSort/Assets"]
position = Vector2( 304, 297 )

[node name="BlockadeNext" type="YSort" parent="YSort/Assets"]

[node name="Rock" parent="YSort/Assets/BlockadeNext" instance=ExtResource( 8 )]
position = Vector2( 533, 100 )
rotation = -0.261799

[node name="Rock2" parent="YSort/Assets/BlockadeNext" instance=ExtResource( 8 )]
position = Vector2( 534, 108 )
rotation = -0.261799

[node name="Rock3" parent="YSort/Assets/BlockadeNext" instance=ExtResource( 8 )]
position = Vector2( 534, 115 )
rotation = -0.261799

[node name="Rock4" parent="YSort/Assets/BlockadeNext" instance=ExtResource( 8 )]
position = Vector2( 534, 122 )
rotation = -0.261799

[node name="Rock5" parent="YSort/Assets/BlockadeNext" instance=ExtResource( 8 )]
position = Vector2( 534, 130 )
rotation = -0.261799

[node name="Rock6" parent="YSort/Assets/BlockadeNext" instance=ExtResource( 8 )]
position = Vector2( 535, 137 )
rotation = -0.261799

[node name="CanvasModulate" type="CanvasModulate" parent="."]
script = ExtResource( 20 )

[node name="EndTransition" parent="." instance=ExtResource( 3 )]
position = Vector2( 607, 114 )
next_scene_path = "res://Menu/StartMenu.tscn"
player_spawn_location = Vector2( 388, 174 )
exit_direction = Vector2( 1, 0 )

[node name="AreaTransition" parent="." instance=ExtResource( 3 )]
position = Vector2( 303, 341 )
next_scene_path = "res://Overworld.tscn"
player_spawn_location = Vector2( 217, -7 )
exit_direction = Vector2( 0, 1 )

[node name="CollisionShape2D" parent="AreaTransition" index="1"]
position = Vector2( 0, -27.6064 )

[node name="BossHearts" parent="." instance=ExtResource( 5 )]

[node name="GolemDeathSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )

[node name="Music" type="AudioStreamPlayer" parent="."]
bus = "Music"

[connection signal="died" from="YSort/Golem" to="." method="_on_Golem_died"]
[connection signal="in_fight" from="YSort/Golem" to="." method="_on_Golem_in_fight"]
[connection signal="body_entered" from="EndTransition" to="YSort/Player" method="_on_EndTransition_body_entered"]
[connection signal="body_exited" from="EndTransition" to="." method="_on_EndTransition_body_exited"]
[connection signal="body_entered" from="AreaTransition" to="YSort/Player" method="_on_AreaTransition_body_entered"]
[connection signal="body_exited" from="AreaTransition" to="." method="_on_AreaTransition_body_exited"]

[editable path="Camera2D"]
[editable path="Tilemaps"]
[editable path="YSort/Player"]
[editable path="YSort/Player/Hurtbox"]
[editable path="YSort/Player/AttackPivot/SwordHitbox"]
[editable path="AreaTransition"]
[editable path="BossHearts"]
[editable path="BossHearts/HeartUI"]
